# semcache

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/semcache/: __init__.py  app.py  cache.py  cli.py  config.py  embedding.py  gateway.py  store.py
tests/: test_cache.py  test_gateway.py
